--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Lego Braille Bricks</title>
     <meta name="description" content="Learn Braille with virtual Lego bricks">
     <link rel="icon" type="image/svg+xml" href="/braille.svg" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#e31e24">
   </head>
