--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lego Braille Bricks</title>
     <meta name="description" content="Learn Braille with virtual Lego bricks">
-    <link rel="icon" type="image/svg+xml" href="/braille.svg" />
-    <link rel="stylesheet" href="/style.css">
-    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" type="image/svg+xml" href=".../braille.svg" />
+    <link rel="stylesheet" href=".../style.css">
+    <link rel="manifest" href=".../manifest.json">
     <meta name="theme-color" content="#e31e24">
   </head>
   <body>
@@ -23,6 +23,6 @@
         </div>
       </main>
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src=".../main.js"></script>
   </body>
 </html>
